--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "express": "~4.13.4",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
-    "express-session": "^1.13.0"
-    //"mongoose": "^4.5.1"
+    "express-session": "^1.13.0",
+    "mongoose": "^4.5.1"
   }
 }
