--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "mongolass": "2.3.1",
         "objectid-to-timestamp": "1.3.0",
         "sha1": "1.1.1",
-        "winston": "2.2.0"
+        "winston": "2.2.0",
+        "formidable": "^1.0.17"
     },
     "devDependencies": {
         "istanbul": "0.4.5",
